--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -1,10 +1,23 @@
 <div class="row description">
+  <!--
+     "id": 1,
+  "artist": "The Prependers",
+  "album": {
+    "name": "Opacity Zero",
+    "releaseDate": "September 25, 2014",
+    "coverImage": "assets/opacity-zero.jpg",
+    "tracks": [
+  -->
   <div class="col-sm-2">
-    <img src="assets/opacity-zero.jpg" alt="product image" />
-  </div>
+      <!--img src="assets/opacity-zero.jpg" alt="product image" /-->
+      <img src="{{albumInfo?.album.coverImage}}" alt="product image" />
+    </div>
   <div class="col-sm-6">
-    <p class="album-name">Opacity Zero</p>
-    <p class="band-name">The Prependers</p>
-    <p class="album-release-date">September 25, 2014</p>
-  </div>
+      <!--p class="album-name">Opacity Zero</p>
+      <p class="band-name">The Prependers</p>
+      <p class="album-release-date">September 25, 2014</p -->
+      <p class="album-name"> {{albumInfo?.album.name}}</p>
+      <p class="band-name">{{albumInfo?.artist}}</p>
+      <p class="album-release-date">{{albumInfo?.album.releaseDate}}</p>
+      </div>
 </div>
